[change] add slug in article, delete transaction and subcription, add example dto
