# app/modules/article/dto/article.create-article.request.dto.go
@@ -1,7 +1,11 @@
 package dto
 
 type CreateArticleRequest struct {
-	Title      string `form:"title" binding:"required"`
-	CategoryID string `form:"category_id" binding:"required"`
-	Body       string `form:"body" binding:"required"`
+
+	Title string `form:"title" example:"Belajar Golang untuk Pemula" binding:"required"`
+
+	CategoryID string `form:"category_id" example:"123e4567-e89b-12d3-a456-426614174000" binding:"required"`
+	
+	Body string `form:"body" example:"Ini adalah isi dari artikel belajar Golang untuk pemula." binding:"required"`
+
 }
